2003-12-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/user32/windows/accel.c (U32IsValidAccelMessage): Translate WM_KEYUP
	and WM_SYSKEYUP messages.
	(TranslateAcceleratorA): Returntype of RtlMultiByteToUnicodeN is NTSTATUS,
	so interpret it as such.
	* subsys/win32k/ntuser/accelerator.c (NtUserDestroyAcceleratorTable):
	Call ObmCloseHandle() before destroying the object.
	(IntTranslateAccelerator): New function.
	(NtUserTranslateAccelerator): Partial implementation.

2003-12-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/win32k/include/accelerator.h: New file.
	* subsys/win32k/ntuser/accelerator.c: Ditto.
	* include/win32k/ntuser.h (NtUserDestroyAcceleratorTable): Make returntype
	BOOLEAN.
	* subsys/win32k/makefile (NTUSER_OBJECTS): Add ntuser/accelerator.o.
	* subsys/win32k/include/object.h (USER_OBJECT_TYPE): Add otAcceleratorTable.
	* subsys/win32k/main/dllmain.c (DllMain): Call InitAcceleratorImpl().
	* subsys/win32k/ntuser/stubs.c (NtUserCopyAcceleratorTable,
	NtUserCreateAcceleratorTable, NtUserDestroyAcceleratorTable,
	NtUserTranslateAccelerator): Move to accelerator.c.

2003-12-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* apps/tests/accelerator: New directory.
	* apps/tests/accelerator/accelerator.c: New file.
	* apps/tests/accelerator/.cvsignore: Ditto.
	* apps/tests/accelerator/Makefile: Ditto.
	* apps/tests/Makefile (TEST_APPS): Add accelerator.

2003-12-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* regtests/Makefile: Generate regression test registrations.
	* regtests/kmregtests/.cvsignore: Ignore Makefile.tests.
	* regtests/win32base/.cvsignore: Ditto.
	* regtests/kmregtests/Makefile: Include Makefile.tests.
	* regtests/win32base/Makefile: Ditto.
	* regtests/kmregtests/tests: New directory.
	* regtests/win32base/tests: Ditto.
	* regtests/kmregtests/tests/.cvsignore: New file.
	* regtests/win32base/tests/.cvsignore: Ditto.
	* tools/helper.mk: Remove TARGET_GENREGTESTS.